--- a/TravelManagementSystem.API/TravelManagementSystem.API.csproj
+++ b/TravelManagementSystem.API/TravelManagementSystem.API.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>1586fcd7-b77c-45fa-a47e-ba790107544c</UserSecretsId>
+		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
